objects/geopointe__GP_Resource_View_Group_Member__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Geopointe_Resource_View_Group__c</fullName>
        <label>Geopointe Resource View Group</label>
        <referenceTo>geopointe__GP_Resource_View_Group__c</referenceTo>
        <relationshipLabel>Resource View Group Members</relationshipLabel>
        <relationshipName>Geopointe_Resource_View_Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GP_Group_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geopointe Resource View Group Member</label>
    <nameField>
        <label>Geopointe Resource View Group Member Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Resource View Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>